--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,9 @@ a {
     color: inherit;
     text-decoration: none;
 }
+button {
+    font-family: inherit;
+}
 
 header {
     background-color: #ffffff;
@@ -41,3 +44,59 @@ header {
 .logo span {
     color: #4D5AE5;
 }
+
+.banner-section {
+    background-color: #2E2F42;
+}
+
+.title  {
+    color:#ffffff;
+    font-size: 56px;
+    font-weight: 700;
+    line-height: 60px;
+    text-align: center;
+}
+
+.banner-button {
+    background-color:#4D5AE5;
+    color: #ffffff;
+    letter-spacing: 0.04em;
+    text-align: center;
+}
+.banner-button:hover,
+.banner-button:focus {
+    background-color: #404BBF;
+}
+
+
+.section-title {
+    color: #2E2F42;
+    font-size: 36px;
+    font-weight: 700;
+    text-align: center;
+}
+.card-title {
+    color: #2E2F42;
+    font-size: 20px;
+    font-weight: 500;
+}
+.text {
+    color: #434455; 
+}
+
+.team-section {
+    background-color: #F4F4FD;
+}
+
+.card {
+    background-color: #ffffff;
+}
+
+.footer {
+    color:#F4F4FD;
+    background-color: #2E2F42;
+}
+.footer .logo {
+    color:#F4F4FD;
+}
+
